<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".activities.login.LoginActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:id="@+id/step1"
            android:focusableInTouchMode="true"
            >

            <TextView
                android:id="@+id/smartButtonTextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Smart Button\u00AE"
                android:textAlignment="center"
                android:textSize="30dp"/>

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username / Nombre de usuario"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password / Contraseña"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:password="true"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/rememberMeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:checked="true"
                android:text="Remember Me / Recuérdame" />

            <Button
                android:id="@+id/loginForgotPasswordBtn"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:text="Forgot Password? / ¿Se te olvidó tu contraseña?"
                android:textColor="@color/gray"
                android:textSize="11sp" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/green_button"
                android:paddingHorizontal="32dp"
                android:text="Sign In / Registrarse" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:text="@string/Bottom_Text"
                android:textSize="13sp" />

        </LinearLayout>

    </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:padding="5dp"
            android:orientation="vertical"
            android:text="@string/patent_notice"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
            android:textAlignment="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

    </LinearLayout>
</merge>
