...
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <ImageButton
                android:id="@+id/locate_me_button"
                android:layout_width="@dimen/smart_button_size"
                android:layout_height="@dimen/smart_button_size"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/imageselector"
                android:scaleType="fitXY" />
...
